Fix layout bug in neraca page

--- a/src/scss/neraca/index.scss
+++ b/src/scss/neraca/index.scss
@@ -90,7 +90,7 @@
             text-align: right;
             font-weight: bold;
             border-top: 1px solid grey;
-            padding-top: 5px;
+            padding-top: 4.5px;
           }
           .total-aktiva {
             width: 100%;
